force-app/main/default/objects/AcctSeed__Product_Part__c/fields/AcctSeed__Inventory_Type__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Inventory_Type__c</fullName>
    <formula>Text( AcctSeed__Product_Part__r.AcctSeed__Inventory_Type__c )</formula>
    <label>Inventory Type</label>
    <type>Text</type>
</CustomField>