force-app/main/default/objects/AcctSeed__Product_Part__c/fields/AcctSeed__Quantity__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Quantity__c</fullName>
    <label>Quantity</label>
    <precision>18</precision>
    <required>true</required>
    <scale>6</scale>
    <type>Number</type>
</CustomField>