force-app/main/default/objects/AcctSeed__Product_Part__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <formula>TEXT(AcctSeed__Product_Part__r.Family)</formula>
    <label>Product Family</label>
    <type>Text</type>
</CustomField>