force-app/main/default/objects/AcctSeed__Product_Part__c/fields/Serialized__c.field-meta.xml
<CustomField>
    <fullName>Serialized__c</fullName>
    <formula>AcctSeed__Product_Part__r.AcctSeedERP__Serialized__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Serialized</label>
    <type>Checkbox</type>
</CustomField>