force-app/main/default/objects/AcctSeed__Product_Part__c/fields/Total_Landed_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Landed_Cost__c</fullName>
    <description>Calculation for total cost of product parts based on landed unit costs</description>
    <formula>AcctSeed__Product_Part__r.Landed_Unit_Cost__c *  AcctSeed__Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Landed Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>