force-app/main/default/objects/AcctSeed__Product_Part__c/fields/Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>Unit_Cost__c</fullName>
    <formula>AcctSeed__Product_Part__r.AcctSeed__Unit_Cost__c</formula>
    <label>Unit Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>