force-app/main/default/objects/AcctSeed__Product_Part__c/validationRules/AcctSeed__Product_Part_Is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>AcctSeed__Product_Part_Is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( AcctSeed__Product_Part__c )</errorConditionFormula>
    <errorDisplayField>AcctSeed__Product_Part__c</errorDisplayField>
    <errorMessage>You must enter a value</errorMessage>
</ValidationRule>