force-app/main/default/objects/AcctSeed__Product_Part__c/listViews/Enjoy_Fun.listView-meta.xml
<ListView>
    <fullName>Enjoy_Fun</fullName>
    <columns>NAME</columns>
    <columns>AcctSeed__Product__c</columns>
    <columns>AcctSeed__Product_Part__c</columns>
    <columns>Product_Code__c</columns>
    <columns>AcctSeed__Quantity__c</columns>
    <columns>Unit_Cost__c</columns>
    <columns>Total_Cost__c</columns>
    <columns>Inventory__c</columns>
    <columns>Serialized__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AcctSeed__Product__c</field>
        <operation>startsWith</operation>
        <value>Enjoy</value>
    </filters>
    <label>Enjoy Fun</label>
    <language>en_US</language>
</ListView>