force-app/main/default/objects/AcctSeed__Product_Part__c/listViews/W1.listView-meta.xml
<ListView>
    <fullName>W1</fullName>
    <columns>NAME</columns>
    <columns>AcctSeed__Product__c</columns>
    <columns>AcctSeed__Product_Part__c</columns>
    <columns>Product_Code__c</columns>
    <columns>AcctSeed__Quantity__c</columns>
    <columns>Unit_Cost__c</columns>
    <columns>Total_Cost__c</columns>
    <columns>Inventory__c</columns>
    <columns>Serialized__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AcctSeed__Product__c</field>
        <operation>contains</operation>
        <value>WINTERIZATION</value>
    </filters>
    <filters>
        <field>AcctSeed__Product__c</field>
        <operation>contains</operation>
        <value>9.9 - 15 4</value>
    </filters>
    <label>W-1</label>
    <language>en_US</language>
</ListView>