force-app/main/default/objects/AcctSeed__Product_Part__c/listViews/z18xcal2.listView-meta.xml
<ListView>
    <fullName>z18xcal2</fullName>
    <columns>NAME</columns>
    <columns>AcctSeed__Product__c</columns>
    <columns>AcctSeed__Product_Part__c</columns>
    <columns>Product_Code__c</columns>
    <columns>AcctSeed__Quantity__c</columns>
    <columns>Unit_Cost__c</columns>
    <columns>Total_Cost__c</columns>
    <columns>Inventory__c</columns>
    <columns>Serialized__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AcctSeed__Product__c</field>
        <operation>contains</operation>
        <value>xcal</value>
    </filters>
    <filters>
        <field>AcctSeed__Product__c</field>
        <operation>contains</operation>
        <value>18</value>
    </filters>
    <label>18 xcal</label>
    <language>en_US</language>
</ListView>